--- a/templates/home/donnees_personnelles.html.twig
+++ b/templates/home/donnees_personnelles.html.twig
@@ -24,6 +24,18 @@
                     <li>téléphone</li>
                 </ul>
                 <p>Ces informations sont enregistrées dans un fichier informatisé.</p>
+                <p>
+                    Les informations recueillies depuis le formulaire de contact:
+                </p>
+                <ul>
+                    <li>nom</li>
+                    <li>prénom</li>
+                    <li>pseudo</li>
+                    <li>adresse e-mail</li>
+                    <li>téléphone</li>
+                </ul>
+                <p>Ces informations ne sont pas enregistrées dans un fichier informatisé. <br>
+                    Elles sont envoyés par e-mail à l'administrateur du site et ont pour objectif de pouvoir entrer en contact avec l'internaute pour répondre à sa demande d'information.</p>
             </div>
 
             <h2 class="title is-size-4 mt-3">Comment sont utilisées les données personnelles collectées ?</h2>
