--- a/templates/home/mentions_legales.html.twig
+++ b/templates/home/mentions_legales.html.twig
@@ -19,12 +19,13 @@
             </div>
             <h2 class="title is-size-4 mt-3">Activité</h2>
             <p>Le site Assum.fr est un service de presse en ligne reconnu par la Commission paritaire des publications et agence de presse (instance paritaire de l'administration de l'Etat et des professionnels de la presse)</p>
-            <h2 class="title is-size-4">Cookies</h2>
+            <h2 class="title is-size-4 mt-3">Cookies (fonctionnement et durée de validité)</h2>
             <p>
-                Les cookies présetent sur le site ont juste un caractère fonctionnel et pas de caractère commercial.
-                L’internaute est informé que, lors de ses visites sur le site, des cookies peuvent être nécessaires à la navigation.
-                Un cookie est un ensemble de données qui ne permet pas d’identifier directement les internautes mais qui sert à enregistrer des informations relatives à la navigation de celui-ci sur le site.
-                L'internaute peut également utiliser le paramétrage de son logiciel de navigation pour refuser les cookies de la manière décrite dans la documentation du navigateur ou sur le site de la Cnil.
+                Les cookies présents sur le site expert-assum.fr ont juste un caractère fonctionnel et pas de caractère commercial. <br>
+                Assum utilise les cookies Google Analytics à des fins statisques et ont une durée de validité d'un an. <br>
+                L’internaute est informé lors de sa première visite sur le site des cookies qui peuvent être nécessaires à la navigation. Celui-ci peut à tout moment les modifier en cliquant sur l'image en bas à droite de son écran.<br>
+                Un cookie est un ensemble de données qui ne permet pas d’identifier directement les internautes mais qui sert à enregistrer des informations relatives à la navigation de celui-ci sur le site. <br>
+                L'internaute peut également utiliser le paramétrage de son logiciel de navigation pour refuser les cookies de la manière décrite dans la documentation du navigateur ou sur le site de la Cnil. <br>
             </p>
             <h2 class="title is-size-4 mt-3">Informations hébergeur</h2>
             <p>
