--- a/templates/home/nous_contacter.html.twig
+++ b/templates/home/nous_contacter.html.twig
@@ -26,6 +26,7 @@
                 {{ form_row(contact_form.message, {
                     label: 'Message:'
                 }) }}
+                {{ form_row(contact_form.consentement) }}
                 {# Honey Pot - antispam #}
                 {{ form_row(contact_form.phone) }}
                 <button type="submit" class="button is-primary">
