FIX BUX Google Analytics 4

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
         });
 
         // Google Analytics
-        tarteaucitron.user.gtagUa = 'UA-185452666-1';
+        tarteaucitron.user.gtagUa = 'G-D4XMSK1E3V'; // G-D4XMSK1E3V or UA-185452666-1
         tarteaucitron.user.gtagMore = function () { /* add here your optionnal gtag() */ };
         (tarteaucitron.job = tarteaucitron.job || []).push('gtag');
 
