CHANGE le logo et CORRIGE bug RESET_TOKEN Le reset token ne se supprimait pas apres changement de mdp

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -7,7 +7,7 @@ $light                    : #a8b2ea;
 $table-cell-padding       : 0.2em 0;
 $footer-background-color  : #a8b2ea;
 $footer-padding           : 3rem 1.5rem 3rem ;
-
+$family-sans-serif        : "Segoe UI", Roboto, sans-serif;
 @import "~bulma";
 
 .liste-produits-admin {
