--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -10,10 +10,10 @@
             <div class="p navbar-brand mx-0">
                 <a class="navbar-item px-5" href="{{ path('home') }}">
                     <img src="{{asset('uploads/images_site/logo_assum.png')}}" alt="Logo Assum">
-                    <p class="subtitle is-4 has-text-primary">
-
-                        <b>ASSUM</b>
-                    </p>
+                    <img src="{{asset('uploads/images_site/logo_assum_texte.png')}}" alt="Logo Assum">
+{#                    <p class="subtitle is-4 has-text-primary">#}
+{#                        <b>ASSUM</b>#}
+{#                    </p>#}
                 </a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
