--- a/templates/home/qui_sommes_nous.html.twig
+++ b/templates/home/qui_sommes_nous.html.twig
@@ -20,13 +20,38 @@
                 </ul>
             </div>
             <p>Par ailleurs, le but du site est aussi de créer un communauté soudée d’utilisateurs via le forum. </p>
-            <h2 class="title is-size-4 mt-3">   Ce que vous allez trouver sur Assum</h2>
+            <h2 class="title is-size-4 mt-3">Ce que vous allez trouver sur Assum</h2>
             <div class="content">
                 <ol type="a">
                     <li>analyses techniques faites par nos experts avec un niveau élevé d’impartialité et de transparence</li>
                     <li>les détails (frais de gestion, taux de participation aux bénéfice etc.) des derniers produits d'assurance vie présents sur le marché financier</li>
                     <li>des avis d'utilisateurs</li>
                 </ol>
+            </div>
+            <div class="divider">expert-assum</div>
+            <h2 class="title is-size-4 mt-3">Nos critères de sélection des meilleurs produits</h2>
+            <div class="content has-text-justified">
+                <p>À présent Assum vous propose plus de 40 produits d’assurance-vie de plus de 20 assureurs. Pour rendre votre choix plus facile, nous avons créé notre propre label de qualité que nous insérons à côté des produits qui valident nos critères de sélection.</p>
+                <p>Voici les critères le plus importants selon nos experts:</p>
+                <h3>La Performance</h3>
+                <p>Le rendement du fonds en euros représente un critère essentiel pour juger la qualité d'un contrat. Même si ce rendement est en baisse chaque année  depuis 30 ans, cela rapporte encore plus que le livret A. </p>
+                <p>Afin d’avoir une bonne vision en la matière pour 2020, il convient de regarder la rentabilité d’un fonds euros sur le long terme. </p>
+                <p>Donc nous considérons comme performants les contrats ayant la moyenne du rendement du fonds en euro net de frais de gestion sur les derniers cinq ans supérieure 1,9% et le taux sur 2019 supérieur à 1,6%.</p>
+                <h3>Le ticket d’entrée</h3>
+                <p>Souvent la souscription est conditionnée d’un versement minimum d’un certain montant qui est moins élevé si le souscripteur choisit  également un plan  de cotisations périodiques.</p>
+                <p>Nous avons sélectionné parmi nos meilleurs produits ceux qui demandent un versement minimum à la souscription de maximum 500 euros sans conditions de  versements périodiques.</p>
+                <h3>Le coût de l’assurance-vie</h3>
+                <p>Il ne faut pas négliger les frais qui jouent un rôle important dans la performance de votre contrat. Pour cette raison nous accordons le label Assum aux contrats dont les frais de gestion  ne dépassent  0.6% en euro pour le fonds et 0,8% en moyenne pour les UC, dont les frais de versements sont inférieurs à 3% et dont les frais d’arbitrage sont inférieurs à 0,5%. </p>
+
+                <h3>Une palette large et diversifiée d’investissement</h3>
+                <p>Parmi vous il y en a certains qui préfèrent mettre tous leurs œufs dans le même panier et le surveiller attentivement. Pour ceux qui souhaitent diversifier leur investissement, nous avons sélectionné des produits proposant au moins 300 UC dont des SCPI, des titres vifs, des trackers et même des fonds labélisés ISR et GREENFIN (pour ceux qui s’oriente vers des investissements  éthiques et socialement responsables).</p>
+                <p>Nous avons considéré encore deux critères de diversification : le choix du type de gestion (libre, profilée, déléguée, pilotée)  et plusieurs options  d’arbitrage automatisées proposées  comme la sécurisation de plus-values, le rééquilibrage automatique, le stop loss etc.</p>
+                <h3>La présence des garanties complémentaires  de prévoyance (incapacité, invalidité, plancher, cliquet etc.)</h3>
+                <p>Souvent négligées par les souscripteurs, les options de prévoyance méritent des fois plus d’attention, surtout si l’un de vos objectif de placement en  assurance-vie est la protection vos proches en cas de décès, en garantissant un montant minimum du capital en cas de décès.</p>
+                <h3>Le SAV</h3>
+                <p>Le dernier critère mais qui doit peser assez lourd dans le choix de votre contrat c’est le service après-vente.  Nous avons validé des produits gérés  par de assureurs solides et de bonne réputation qui donnent accès à un espace client  pour consultation de la valorisation du contrat, pour la mise à jour des informations personnelles et pour effectuer des arbitrages en ligne.</p>
+                <p>Nous avons recherché également  les assureurs qui respectent  leurs délais de traitement, informations que nous avons récupérées grâce à notre forum. </p>
+
             </div>
         </div>
     </div>
