--- a/templates/admin_user/liste.html.twig
+++ b/templates/admin_user/liste.html.twig
@@ -34,7 +34,7 @@
                     <td>{{ user.telephone}}</td>
                     <td>{{ user.inscription | date("d/m/y")}}</td>
                     <td>
-                        <div class="buttons is-pulled-right">
+                        <div class="buttons are-small is-pulled-right">
                             <a href="{{ path('admin_user_edit', {id:user.id}) }}" class="button is-success">Modifier</a>
                             <a href="{{ path('admin_user_delete', {id:user.id}) }}" class="button is-danger">Supprimer</a>
                         </div>
