--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,8 +13,8 @@
                             Assum fait l'analyse des produits d'assurance-vie sur le marché et essaie de répondre aux questions les plus posées.
                         </h2>
                         <p class="is-size-6-touch is-size-5-desktop has-text-justified">
-                            Instrument préféré des français pour faire fructifier leurs épargnes, l’assurance-vie n’a plus de secret pour nous. Que ce soit le fonctionnement d’un contrat d’assurance-vie, les derniers produits sur le marché ou les réformes législatives du domaine, Assum vous tient informés et vous accompagne dans votre quête pour le produit le plus adéquat à votre profil d’investissement.<br>
-
+                            Instrument préféré des français pour faire fructifier leurs épargnes, l’assurance-vie n’a plus de secret pour nous. Que ce soit le fonctionnement d’un contrat d’assurance-vie, les derniers produits sur le marché ou les réformes législatives du domaine, Assum vous tient informés et vous accompagne dans votre quête pour le produit le plus adéquat à votre profil d’investissement.</p>
+                        <p class="is-size-6-touch is-size-5-desktop has-text-justified">
                             Adaptés aux prudents mais aussi aux audacieux, aux novices mais également aux expérimentés, nos articles et comparatifs répondent aux questions  les plus fréquentes dont vous trouvez ci-dessous quelques exemples :
                         </p>
                     </div>
