--- a/templates/includes/metadata.html.twig
+++ b/templates/includes/metadata.html.twig
@@ -1,4 +1,4 @@
 <meta
         name="description"
-        content="Meilleur comparateur produits d’assurance-vie, forum assurance-vie, développement durable, solidaire, placements rentables, investissement écoresponsable"
+        content="Meilleur comparateur produits d’assurance-vie, développement durable, solidaire, placements rentables, investissement écoresponsable, diversification"
 >
