--- a/templates/contact/reset_password.html.twig
+++ b/templates/contact/reset_password.html.twig
@@ -14,7 +14,7 @@
             <columns>
                 <spacer size="8"></spacer>
                 <h4>Bonjour,</h4>
-                <p>Vous avez demandé la réinitialisation du mot de passe pour le site Assum. <br>
+                <p>Vous avez demandé la réinitialisation du mot de passe pour le site www.expert-assum.fr. <br>
                     Veuillez cliquer sur le lien ci-dessous pour le réinitialiser.</p>
                 <p><a href="{{ url }}">Réinitialiser mon mot de passe</a></p>
                 <p>
