--- a/templates/produit/affichage.html.twig
+++ b/templates/produit/affichage.html.twig
@@ -53,7 +53,7 @@
 {#                    <hr>#}
                     <h6 class="is-size-7">
                         <span class="icon has-text-info"><i class="fas fa-info-circle"></i></span>
-                        <span>Produit disponible depuis {{ produit.creation|date('d/m/Y') }}</span>
+                        <span>Produit disponible depuis {{ produit.creation|date('m/Y') }}</span>
                     </h6>
                 </div>
 
@@ -140,33 +140,47 @@
                 </div>
                 <div class="column is-half">
                     <h1 class="has-text-left title is-size-4">Avis récents</h1>
-                    {% for avis in derniersAvis %}
-                        <div class="box">
-                            <div class="media-content">
-                                <div class="content">
-                                    <p>
-                                        <strong>
-                                            {{ avis.auteur.prenom | default('Non disponible') }} {{ avis.auteur.nom | default('') }}
-                                        </strong>
-                                        <small>
-                                            {% if (avis.auteur.pseudo is defined) %}
-                                                @{{ avis.auteur.pseudo }}
-                                            {% else %}
+                    {% if derniersAvis %}
+                        {% for avis in derniersAvis %}
+                            <div class="box">
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>
+                                                {{ avis.auteur.prenom | default('Non disponible') }} {{ avis.auteur.nom | default('') }}
+                                            </strong>
+                                            <small>
+                                                {% if (avis.auteur.pseudo is defined) %}
+                                                    @{{ avis.auteur.pseudo }}
+                                                {% else %}
 
-                                            {% endif %}
-                                        </small>
-                                        <br>
-                                        {{ avis.commentaire }}
-                                    </p>
-                                    <div class="tags has-addons">
-                                        <span class="tag">
-                                            {{ avis.note }}/10
-                                        </span>
+                                                {% endif %}
+                                            </small>
+                                            <br>
+                                            {{ avis.commentaire }}
+                                        </p>
+                                        <div class="tags has-addons">
+                                            <span class="tag">
+                                                {{ avis.note }}/10
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                        {% endfor %}
+                    {% else %}
+                        <div class="box">
+                            <div class="media-content">
+                                <div class="content">
+                                    <p class="is-size-6-touch is-size-5-desktop">
+                                        <strong>
+                                            Pas d'avis disponible pour ce produit.
+                                        </strong>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
